Refatoração e Atualização do README